# LocalGen-new

./: .clang-format  .gitignore  BUGs and FEATUREs.txt  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CheckMap.cpp  CreatMap.cpp  CreateMap.cpp  LGGraphics.hpp  LGMain.cpp  LGMain.cpp.1674825211.editbackup  LGbot.hpp  LGclient.cpp  LGcons.hpp  LGdebug.hpp  LGdef.hpp  LGencoding.hpp  LGgame.hpp  LGgame.hpp.1674814952.editbackup  LGgraphics.cpp  LGgraphics.hpp  LGhelp.md  LGincludeall.hpp  LGlib.hpp  LGmain.cpp  LGmaps.cpp  LGmaps.hpp  LGmaps.hpp.1674900376.editbackup  LGoldmaps.hpp  LGpages.hpp  LGprint.hpp  LGreplay.hpp  LGserver.cpp  LGset.hpp  LGweb.hpp  LGzipmap.cpp  LGzipmap.hpp  LGzipmap.hpp.gch  LICENSE  (+40 more)
.github/workflows/: codeql.yml  qt-build.yml
Bot/: ktqBot.hpp  lcwBot.hpp  smartRandomBot.hpp  xiaruizeBot.hpp  xrzBot.hpp
LocalGen/: CMakeLists.txt  main.cpp
assets/css/: main.css
assets/js/: site.js
botlib/: README.md  gcBot.hpp  ktqBot.hpp  lcwBot.hpp  smartRandomBot.hpp  szlyBot.hpp  xiaruizeBot.hpp  xrzBot.hpp  zlyBot.hpp  zlyBot_v2.1.hpp  zlyBot_v2.hpp
build-LocalGen-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-LocalGen-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-LocalGen-Desktop_Qt_6_6_1_MinGW_64_bit-Debug/LocalGen_autogen/: deps
config/_default/: hugo.toml  menus.en.toml  menus.zh.toml
content/: _index.en.md  _index.zh.md  about.en.md  about.zh.md  bots.en.md  bots.zh.md  contribute.en.md  contribute.zh.md  disclaimer.en.md  disclaimer.zh.md  downloads.en.md  downloads.zh.md  faq.en.md  faq.zh.md  simulator.en.md  simulator.zh.md  website-license.en.md  website-license.zh.md
content/contributors/: _index.en.md  _index.zh.md
content/docs/: _index.en.md  _index.zh.md  associated-files.en.md  associated-files.zh.md  bot-contributions.en.md  bot-contributions.zh.md  built-in-bots.en.md  built-in-bots.zh.md  code-of-conduct.en.md  code-of-conduct.zh.md  commit-regulations.en.md  commit-regulations.zh.md  getting-started.en.md  getting-started.zh.md  local-game.en.md  local-game.zh.md  map-creator.en.md  map-creator.zh.md  naming-method.en.md  naming-method.zh.md  simulator-guide.en.md  simulator-guide.zh.md
content/releases/: _index.en.md  _index.zh.md
data/: bots.json  contributors.json  project.json  releases.json
docs/: associated files.md  associated-files.md  bot-contributions.md  commit regulations.md  commit-regulations.md  naming method.md  naming-method.md
drafts/: GameEngine.draft.h  GameEngine.draft.hpp  board.h  board.hpp  coord.h  coord.hpp  player.h  player.hpp  tile.h  tile.hpp
ege/: version.txt
glib/: GLIB_HEAD.hpp  GLIB_circbut.hpp  GLIB_image.hpp  GLIB_page.hpp  GLIB_rectbut.hpp  GLIB_rectcbox.hpp  README.md
graphics/: LGGrectbut.hpp
i18n/: en.toml  es.toml  fr.toml  ja.toml  ko.toml  zh.toml
include/: ege.h
layouts/: index.html
layouts/_default/: baseof.html
layouts/contributors/: list.html
layouts/docs/: list.html  single.html
layouts/partials/: docs-nav.html  footer.html  head.html  header.html  language-switcher.html  page-sidecar.html  release-notes-preview.html
layouts/releases/: list.html
maps/: !@#$.lg  Plots.ini  Plots.lg  arena01.ini  arena02.ini  arena03.ini  arena03.lg  arena04.ini  dlk01.ini  dlk01.lg  dlk01_wtcz.ini  dlk01_wtcz.lg  dlk02.ini  dlk02.lg  dlk03.ini  dlk03.lg  dlk04.ini  dlk04.lg  dlk05.ini  dlk05.lg  dlk06.ini  dlk06.lg  dlk07.ini  dlk07.lg  dlk08.ini  dlk08.lg  dlk09.ini  dlk09.lg  dlk09_wtcz.ini  dlk09_wtcz.lg  dlk10.ini  dlk10.lg  dlk11.ini  dlk11.lg  dlk11_lg_sp.ini  dlk11_lg_sp.lg  dlk11_wtcz.ini  dlk11_wtcz.lg  dlk12.ini  dlk12.lg  (+40 more)
old/: LGdef.hpp  LGencoding.hpp  LGgraphics.hpp  LGmain.cpp  LGmaps.hpp  LGreplay.hpp  LICENSE.md  LocalGen.dev  Makefile.win  README.md
old/botlib/: smartRandomBot.hpp  xiaruizeBot.hpp  xrzBot.hpp  zlyBot.hpp
old/glib/: GLIB_HEAD.hpp  GLIB_image.hpp  GLIB_rectcbox.hpp
old/img/: README.md
old/maps/: !@#$.ini  arena01.lg  arena02.lg  arena03.ini  arena04.lg  dlk01.lg  dlk01_wtcz.lg  dlk02.lg  dlk03.lg  dlk06.ini  dlk06.lg  dlk07.lg  dlk08.ini  dlk11.ini  dlk11_wtcz.ini  dlk12.ini  dlk12.lg  dlk13.lg  dlk18.lg  dlk20.ini  dlk20.lg  dlk21.ini  gjr.ini
releases/v4.0.0/: LocalGen_v4.0.0_win.7z
releases/v4.0.1/: LocalGen_v4.0.1_win64.7z
releases/v4.2.0/: LocalGen_v4.2.0_win64.7z
releases/v4.2.3D/: LocalGen_v4.2.3D_win64.7z
releases/v4.2.4D/: Local_Generals_io_v4.2.4D_win64.7z
releases/v4.2.5D/: LGen_v4.2.5D_win64.7z
releases/v4.3.0D/: LGen_v4.3.0D_win64.7z
releases/v4.3.1D/: LGen_v4.3.1D_win64.7z
releases/v4.3.2D/: LGen_win64_v4.3.2D.7z
res/: localgen.desktop  localgen.rc  localgen.rc.in  res.qrc
res/icons/: icon.icns
res/maps/: !@#$.lgmp  Plots.lgmp  arena01.lgmp  arena02.lgmp  arena03.lgmp  arena04.lgmp  arena05.lgmp  dlk01.lgmp  dlk01_wtcz.lgmp  dlk02.lgmp  dlk03.lgmp  dlk04.lgmp  dlk05.lgmp  dlk06.lgmp  dlk07.lgmp  dlk08.lgmp  dlk09.lgmp  dlk09_wtcz.lgmp  dlk10.lgmp  dlk11.lgmp  dlk11_lg_sp.lgmp  dlk11_wtcz.lgmp  dlk12.lgmp  dlk13.lgmp  dlk14.lgmp  dlk15.lgmp  dlk16.lgmp  dlk17.lgmp  dlk18.lgmp  dlk19.lgmp  dlk20.lgmp  dlk21.lgmp  dlk22.lgmp  dlk23.lgmp  dlk24.lgmp  dlk25.lgmp  dlk27.lgmp  dlk28.lgmp  gjr.lgmp  gjr2.lgmp  (+7 more)
scripts/: generate_visual_assets.py  package-macos-dmg.sh  sync_localgen.py
simulator/: README.md  botSimulator.cpp
src/: LGdef.hpp  LGencoding.hpp  LGmain.cpp  LGmaps.hpp  LGweb.hpp  LGzipmap.hpp  main.cpp  verinfo.h
src/GameEngine/: board.cpp  board.h  board.hpp  bot.h  game.cpp  game.h  game.hpp  game_configurations.txt  move.cpp  move.h  move.hpp  player.cpp  player.h  player.hpp  tile.cpp  tile.h  tile.hpp  utils.hpp
src/botlib/: gcBot.hpp  ktqBot.hpp  szlyBot.hpp  xiaruizeBot.hpp
src/bots/: DummyBot.cpp  KutuBot.cpp  LyBot.cpp  README.md  gcBot.cpp  ktqBot.cpp  oimBot.cpp  smartRandomBot.cpp  szlyBot.cpp  template.cpp  xiaruizeBot.cpp  xrzBot.cpp  zlyBot.cpp  zlyBot_v2.1.cpp  zlyBot_v2.cpp
static/: site.webmanifest
tools/: webMapTransfer.cpp
(+72 files in other folders)
